--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hey drishtiiii : )</title>
+    <title>hey nischhayyyy : )</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800&family=Lora:wght@400;500;600;700&family=Cormorant+Garamond:wght@400;500;600;700&display=swap');
 
@@ -1647,74 +1647,61 @@ opacity: 0;
 
   <div class="message" id="message">
     <p>
-      <p id="personal">Your majestyy, : ) this site is <b>yours</b>, and <b>yours</b> aloneee, <b>FOREVER</b>.</p>
+      <p id="personal">Mera ladduuuu : ) this site is <b>yours</b>, and <b>yours</b> aloneee, <b>FOREVER</b>.</p>
 <div style="display: inline-flex; gap: 10px; align-items: center; flex-wrap: wrap; margin-top: 6px; margin-bottom: 10px;">
   <button class="theme-link-button" id="galaxyBtn">
     <span class="button-content">our little galaxy</span>
   </button>
   <button class="theme-link-button" onclick="window.location.href='teddy.html'">
-    <span class="button-content">Happiestt Teddy Dayyy^^🧸</span>
+    <span class="button-content">Happiestt Valentine Dayyy^^🌷🌷🎀🎀💋💞</span>
   </button>
 
 </div>
 <br />
 <span style="display: none;">https://ksneoge1-pixel.github.io/testing/ </span>
 
-    9th Dec 2025, 11:21 Someee newww songss have been addedd hehe. I hopeee yourrr day goesss amazinglyyyy and that youuu have a niceeee cheerful
-    mood throughouttt the dayyy, helping you to focus on your preparationnnn : ))))))) 
-    LESSSSGOOOOOOOOOOOOOOOOO!!!     
+    31th Dec 2025, 3:12pm ''Aap bhi punjabi ho kya'' , this single question on a discord sever made us lovers, i mean can you belileve ts shit? oh ofcourse u'll cus ur dumb.
+    and then my usernameee ''khati.hu.kiwi.me.teri.biwi'' waaahh am so talented T_T , the reason we started to talk and stuff ughh :DDDD LESSGOOOOO!!!
     <br/>
 
-    <br/>Alsoooo, if you ever feel sad... or just not good, you are always welcome here. Feel like home :)
-    Just the way you make me feel whenever we talk...
+    <br/>Anywass, if you ever feel sad... or just not good, you are always welcome here. Feel like home :)
+    Just the way you make me feel whenever we talk...Js wanted to remind you that i'm always in your corner.If ur feeling heavy or js having a bad day, you don't have to pretned everything is fine w me.'m here to listen if you need to vent 
     <br/>
       (no changes after thisss, but you can read it if you want to hehe)<br /><br />  
       
-      <br />
-      You're missing from me each moment we're not talking...sigh.Be
-      focused. Exams are closing in. And you're doinggg great, keep it up. I
-      love your dedication. I know you're going to do great in your exams.
-      Please stay focused. Althought I WILL MISS YOU SO MUCH. I ALREADY AM.
-      So if you're reading this, you're.... entirely missing from me.
-      drishti. Study well, YOU GOT THIS ❤️<br />WE GOT THISS!! <br /><br />
-
-      <br /><br />im still ready to be murdered when you'll be back XDDD
-      hehe :))) <br /><br />
-      <b>All The Best, drishti : )))</b><br /><br />
+      <br /><br />
       I just want to remind you how <b>amazing</b>, <b>kind</b>,
       <b>sweet</b>, <b>cute</b>, <b>endearing</b>, and <b>comforting</b> you
-      are, with your absolutely <b>beautiful</b>, <b>soothing</b> voice and
-      your incredibly <b>beautiful</b>caring nature, which always makes me
+      are, with your absolutely <b>handsome</b>, <b>soothing</b> voice and
+      your incredibly <b>charming</b>caring nature, which always makes me
       feel like <b>home</b>. <br /><br />
       You'll be really successful someday, with all the hardwork and
       dedication you put into everything you do. I'm so proud(or happy for
       you, in your words :D), impressed and inspired by everything you've
-      done, including the masterpieces, painting, poems, proses,
+      done, including the masterpieces, painting, 3d thingys
       yourself,and I can't wait to see all the great things you'll achieve
       in the future. <br /><br />
 
       Just keep being yourself, the wonderful person you are, and never
       forget, how much you are valued. <br /><br />
-      I abso-f*ing-lutely loved the way you were listening to me, so
-      attentively, with so much interest and care, when I was telling you
-      about the NSG operation exhibition. <br /><br />
+      I abso-f*ing-lutely love the way you speak, dress style thora theek haii but yeahh everything, ur my world <br /><br />
 
       I'm really grateful to have crossed paths with you, and I cherish
       every laugh, every joke, every little, deep and fun conversation we've
       had, memeories we've shared and every upcoming ones.. <br /><br />  
 
-      and how could i forgettt, may this Diwali light up your inner self,
-      bring you endless joy,<b>beeeeauuutiful</b> smilesss,
+      and how could i forgettt,light up your inner self,
+      bring you endless joy,<b>handsooommemeee</b> smilesss,
       <b>prosperityyyy</b>, and <b>successssss</b>.
-      <b>Happy Diwaliii drishti ;)</b> <br />Like those animations??
+      <b>Happy valentine dayy nischayy ;)</b> <br />
       :)))))))) <br />try clicking on the words and seeeee heheheheh
 
-      <br />You're an angel, drishti. Never forget that : )
+      <br />You're an angel, nischay. Never forget that : )
     </p>
   </div>
 
   <div class="playlist" id="playlist">
-    <h2>Your (& my) Fav Songss (remind me of you)</h2>
+    <h2> Fav Songss (remind me of you)</h2>
     <div class="song-item" data-src="./src/Cry.mp3">
       <div class="song-info">
         <div class="song-title">Cry (please don't cry)</div>
@@ -1723,17 +1710,17 @@ opacity: 0;
       <div class="play-icon">▶</div>
     </div>
 
-    <div class="song-item" data-src="./src/ihateuiloveyou.mp3">
+    <div class="song-item" data-src="./src/humterepyarmein.mp3">
       <div class="song-info">
-        <div class="song-title">i hate you, i love you</div>
-        <div class="song-artist">Olivia O'brien anddd gnashhh</div>
+        <div class="song-title">Hum tere pyar me </div>
+        <div class="song-artist">Lata mangeshkarr</div>
       </div>
       <div class="play-icon">▶</div>
     </div>
-    <div class="song-item" data-src="./src/Yellow.mp3">
+    <div class="song-item" data-src="./src/thoseeyes.mp3">
       <div class="song-info">
-        <div class="song-title">Yellow</div>
-        <div class="song-artist">Coldplayy</div>
+        <div class="song-title">Those eyes</div>
+        <div class="song-artist">Iris jeans</div>
       </div>
       <div class="play-icon">▶</div>
     </div>
